# rustbin

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  flake.nix
.sqlx/: query-2d3e54dad5493d52ccb436bfa7e17db250603b81319bded7dd9bb89427ed0112.json  query-3ed21cc5b901b6124f8d05bcd0c50c3320d5f8e38a1f64ffdb75e2932da01e70.json  query-59006c3a842f152aef4cfac4db7155b90702af7d43bc85e20ac68af19c7a1b75.json  query-6ce5c3d866774798772be9cd0ea8f5f3afd135aba0507e3247b10dfe10a8bc04.json  query-9d6da48af7810391d977de2bd030b93ce7cc13a0438e8c3ef88870cb49469f42.json  query-b601a4db38bc6e392c2ec4192c4278152fb711c85751fda9bbfc56ff82f48cb2.json  query-bf0fd22fc207ba139cc9be5032b7a7a34e876278ba1776f75805395db7a9250e.json
migrations/: 20240914185122_init.sql
src/: auth.rs  comments.rs  main.rs  paste.rs  utils.rs
templates/: create.html  index.html  login.html  logout.html  paste.html  register.html
templates/components/: header.html.tera
