[package]
name = "rustbin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.9.0"
env_logger = "0.11.5"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
tera = "1.20.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "migrate",
] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10.6"
bcrypt = "0.12"